<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/editColor"
        android:elevation="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_product_example"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/iv_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:src="@drawable/ic_circle_red"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/iv_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:src="@drawable/ic_circle_green"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textStyle="bold"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_product"
                app:layout_constraintEnd_toStartOf="@+id/ib_delete"
                android:layout_margin="16dp"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_desc"
                app:layout_constraintTop_toTopOf="@id/tv_name"
                app:layout_constraintStart_toEndOf="@+id/iv_product"
                android:layout_margin="16dp"
                android:ellipsize="end"
                app:layout_constraintEnd_toStartOf="@+id/ib_delete"
                android:maxLines="3"/>

            <TextView
                android:id="@+id/tv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_value"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_product"
                android:layout_margin="16dp"/>

            <ImageButton
                android:id="@+id/ib_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:layout_margin="14dp"
                android:padding="4dp"
                android:src="@drawable/ic_edit"
                android:tint="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/ib_delete"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/ib_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:layout_margin="14dp"
                android:padding="4dp"
                android:backgroundTint="@color/red"
                android:src="@drawable/ic_delete"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>